web-infras/parser/tests/fixtures/esprima/es2017/async/methods/invalid-async-class-constructor/output.txt
[SyntaxError]: Class constructor may not be an async method. (1,17)
1|class X { async constructor(){} }
 |               ^
